--- a/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  generateName: disable-alerts-
+  Name: disable-alerts
   labels:
     codefresh.io/cert: disable-job
   annotations:
