--- a/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  generateName: smoke-tests-
+  Name: smoke-tests
   annotations:
     argocd.argoproj.io/PostSync-wave: "10"   
   labels:
